(menhir
 (explain true)
 (modules MiniFunParser MiniImpParser))
(ocamllex MiniFunLexer MiniImpLexer)
(library
 (name MiniLang)
 (preprocess(pps ppx_deriving.show))
 (modules MiniFunLexer MiniFunParser MiniFun MiniImp MiniImpParser MiniImpLexer 
 GenericCFG MiniImpControlFlow MiniRISC MiniRISCControlFlowGraph 
 CFGDataFlowAnalysis DefinedVariablesAnalysis LiveVariableAnalysis
 LiveRangeOptimization
 ))
